adguard/resources/adguard.namespace.yaml
# Namespace for the adguard components
apiVersion: v1
kind: Namespace

metadata:
  name: adguard
