adguard/resources/adguard.viktor.cloud.ingressroute.traefik.yaml
# HTTPS ingress for Adguard
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: adguard.viktor.cloud
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`adguard.viktor.cloud`)
    services:
    - kind: Service
      name: adguard-home-web
      passHostHeader: true
      port: web
      scheme: http
  tls:
    secretName: adguard.viktor.cloud-tls
